[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ailaunch"
version = "0.1.1"
description = "Launch Claude Code with directory memory"
requires-python = ">=3.8"
dependencies = ["colorama"]

[project.scripts]
claunch = "claunch.main:main"

[tool.setuptools.packages.find]
where = ["."]
